--- a/src/app/matcher/matcher.list.component.html
+++ b/src/app/matcher/matcher.list.component.html
@@ -3,36 +3,36 @@
 		<div class="tltle">Mapeamentos</div>
 		<div class="bordered">
 			<!-- Filtro  -->
-			<div style="width:60%; margin-left: 7px;">
+			<div class="filter">
 				<div class="filter-label">Filtro</div>
 				<div style="display:flex">	
-					<div style="display: flex; margin: 5px 0 0 10px">
-						<div style="font-size: 12px; margin-right: 13px;">Nome</div>
+					<div class="filter-name">
+						<div>Nome</div>
 						<input [(ngModel)]="tableName" type="text" size="20">
 					</div>
-					<div style="display: flex; margin: 5px 0 0 63px">
-						<div style="font-size: 12px; margin-right: 13px;">Associada</div>
+					<div class="filter-associado">
+						<div>Associada</div>
 						<input [(ngModel)]="justAssociated" type="checkbox">
 					</div>
 				</div>
-				<div style="direction: rtl; margin-right: 28px">
+				<div class="div-botao-filter">
 					<button (click)="onFilter()">
 						Filtrar
 					</button>
 				</div>
 			</div>
-			<div style="margin-top:22px; width:60%">
+			<div class="div-line-divider">
 				<div class="line-divider"></div>
 			</div>
-			<div style="margin:5px 0 0 13px;">
+			<div class="list-content">
 				<div class="table-title">Tabelas TaxONE</div>
-				<div style="margin: 5px 0 10px 0; width:58%">
-					<table cellspacing="0" style="width: 100%">
+				<div class="matcher-inner-content">
+					<table cellspacing="0" class="width-100">
 						<thead>
-							<td class="table-header" style="width: 10%">SAFX</td>
-							<td class="table-header" style="width: 65%">Nome</td>
-							<td class="table-header" style="width: 20%">Fonte Origem</td>
-							<td class="table-header" style="width: 5%"></td>
+							<td class="table-header width-10">SAFX</td>
+							<td class="table-header width-65">Nome</td>
+							<td class="table-header width-20">Fonte Origem</td>
+							<td class="table-header width-5"></td>
 						</thead>
 						<tbody>
 							<tr *ngFor="let safTable of safTables" class="t-row">
@@ -40,13 +40,13 @@
 								<td class="t-columns">{{safTable.description | slice:0:50}}</td>
 								<td class="t-columns">{{safTable.dsTableName ? safTable.dsTableName : 'Não Associado'}}</td>
 								<td class="t-columns" style="padding: 1px">
-									<button (click)="onEdit(safTable.id)"  style="padding: 1px 6px 1px 6px;">Editar</button>
+									<button (click)="onEdit(safTable.id)" class="edit-button" >Editar</button>
 								</td>
 							</tr>
 						</tbody>
 					</table>
-					<div style="display:flex; margin-left: 10px; margin-top:5px;">
-						<div style="width:90%"></div>
+					<div class="pagination-div">
+						<div></div>
 						<pagination [pagination]="pagination" [totalPages]="totalPages" (page)="onPage($event)"></pagination>
 					</div>
 				</div>
