--- a/src/styles.css
+++ b/src/styles.css
@@ -242,3 +242,42 @@ select.style::-webkit-scrollbar-thumb {
 	text-align: left;
 	transition: .5s;
 }
+
+.list-content{
+    margin:5px 0 0 13px;
+}
+
+.width-5{
+    width: 5%;
+}
+
+.width-10{
+    width: 10%;
+}
+
+.width-20{
+    width: 20%
+}
+
+.width-60 {
+    width: 60%;
+}
+
+.width-65 {
+    width: 65%
+}
+
+.width-100{
+    width: 100%;
+}
+
+.pagination-div {
+    display:flex; 
+    margin-left: 10px; 
+    margin-top:5px;
+}
+
+.pagination-div div{
+    width:90%
+}
+
