retirada dos styles das paginas

--- a/src/app/alert/alert.component.html
+++ b/src/app/alert/alert.component.html
@@ -5,7 +5,7 @@
 		<div class="bordered">
 			<div class="list-content">
 				<div class="table-title">Emails</div>
-				<div class="alert-inner-content">
+				<div class="inner-content">
 					<table cellspacing="0" class="width-100">
 						<thead>
 							<td class="table-header width-60">Email</td>
