--- a/src/app/matcher/matcher.list.component.html
+++ b/src/app/matcher/matcher.list.component.html
@@ -26,7 +26,7 @@
 			</div>
 			<div class="list-content">
 				<div class="table-title">Tabelas TaxONE</div>
-				<div class="matcher-inner-content">
+				<div class="inner-content">
 					<table cellspacing="0" class="width-100">
 						<thead>
 							<td class="table-header width-10">SAFX</td>
