--- a/src/app/monitoring/monitoring.component.html
+++ b/src/app/monitoring/monitoring.component.html
@@ -5,10 +5,10 @@
 		<div class="bordered">
 			<div style="display:flex">
 				<div id="piechart" style="margin: 3px"></div>
-				<div style="margin:17px 0 0 28px; width: 46%;">
+				<div class="monitoring-list-content"style="width: 46%;">
 					<div class="table-title">Agendamentos</div>
-					<div style="margin: 5px 0 10px 0;">
-						<table cellspacing="0" style="width: 100%">
+					<div class="list-content">
+						<table cellspacing="0" class="width-100">
 							<thead>
 								<td class="table-header" style="width: 32%">Nome</td>
 								<td class="table-header" style="width: 24%">Horário</td>
@@ -22,14 +22,13 @@
 									<td class="t-columns" style="width: 10px">{{sl.status}}</td>
 									<td class="t-columns" style="height:16px">
 										<button (click)="onView(sl.id)" [hidden]="sl.status != 'Erro no retorno TaxOne'" 
-											style="padding: 0px 6px 0px 6px;">Detalhes
-										</button>
+                                            class="button-detalhes">Detalhes</button>
 									</td>
 								</tr>
 							</tbody>
 						</table>
-						<div style="display:flex; margin-left: 10px; margin-top:5px;">
-							<div style="width:90%"></div>
+						<div class="pagination-div">
+							<div></div>
 							<pagination [pagination]="pagination" [totalPages]="totalPages" (page)="onPage($event)"></pagination>
 						</div>
 					</div>
