--- a/src/app/sourceconfig/sourceconfig.component.html
+++ b/src/app/sourceconfig/sourceconfig.component.html
@@ -4,9 +4,9 @@
 		<div class="tltle">Datasource</div>
 		<div class="bordered">
 			<!-- JDBC -->
-			<div style="display: flex; margin-top: 15px">
-				<div style="width: 60%">
-					<div style="font-size: 14px; font-weight: 600; margin-left:13px">Detalhes</div>
+			<div class="main-conteiner">
+				<div class="width-60">
+					<div class="detalhes-label">Detalhes</div>
 					<div [hidden]="dataSourceType != 'Database'" class="mapping-panel">
 						<div class="mapping-field-container" style="margin-top: 18px">
 							<div class="mapping-field">JDBC url</div>
@@ -26,7 +26,7 @@
 								style="height: 100px;resize: none;">
 							</textarea>
 						</div>
-						<div style="margin: 10px 10px 0 13px; display: flex; direction: rtl">
+						<div class="metadata-button">
 							<button (click)="onGetMetadata()">Get Metadata</button> 
 						</div>
 						<div style="margin-top: 15px;">
@@ -45,7 +45,7 @@
 						</div>
 						<div style="height: 74px">
 						</div>
-						<div style="margin: 10px 10px 0 13px; display: flex; direction: rtl">
+						<div class="metadata-button">
 							<button (click)="onGetMetadata()">Get Metadata</button> 
 						</div>
 						<div style="margin-top: 15px;">
@@ -70,7 +70,7 @@
 								style="height: 100px;resize: none;" >
 							</textarea>
 						</div>
-						<div style="margin: 10px 10px 0 13px; display: flex; direction: rtl">
+						<div class="metadata-button">
 							<button (click)="onGetMetadata()">Get Metadata</button> 
 						</div>
 						<div style="margin-top: 15px;">
@@ -79,16 +79,16 @@
 				</div>
 				<div style="width: 37%;">
 					<div style="display: flex;">
-						<div class="table-title" style="padding: 0px 8px 6px 0px;">Campos</div>
-						<select (change)="onDSCnage($event)" style="height: 24px !important; padding: 0px; margin-top: -3px;">
+						<div class="table-title campos-title" >Campos</div>
+						<select (change)="onDSCnage($event)" class="campos-select">
 							<option *ngFor="let dsTable of dsTables"value="{{dsTable.id}}">{{dsTable.name}}</option>
 						</select>
 					</div>
-					<div style="margin: 5px 0 10px 0;">
-						<table cellspacing="0" style="width: 100%">
+					<div class="campos-list-content">
+						<table cellspacing="0" class="width-100">
 							<thead>
-								<td class="table-header" style="width: 35%">Tabela/Arquivo</td>
-								<td class="table-header" style="width: 35%">Coluna</td>
+								<td class="table-header width-35">Tabela/Arquivo</td>
+								<td class="table-header width-35">Coluna</td>
 								<td class="table-header" style="width: 23%">Tipo</td>
 								<td class="table-header">Tamanho</td>
 							</thead>
@@ -101,15 +101,15 @@
 								</tr>
 							</tbody>
 						</table>
-						<div style="display:flex; margin-left: 10px; margin-top:5px;">
-							<div style="width:90%"></div>
+						<div class="pagination-div">
+							<div></div>
 							<pagination [pagination]="pagination" [totalPages]="totalPages" (page)="onPage($event)"></pagination>
 						</div>
 					</div>
 				</div>
 			</div>
-			<div style="width: 60%; direction: rtl; margin-top: 10px">
-				<button (click)="onSave()" >Salvar</button> 
+			<div class="button-container">
+				<button (click)="onSave()">Salvar</button> 
 				<button (click)="onBack()" style="margin-right: 5px">Cancelar</button> 
 			</div>
 		</div>
