--- a/src/app/sourceconfig/sourceconfig.list.component.html
+++ b/src/app/sourceconfig/sourceconfig.list.component.html
@@ -3,16 +3,16 @@
 		<!--h1>HI FOLKS</h1-->
 		<div class="tltle">Datasources</div>
 		<div class="bordered">
-			<div style="width: 45%; margin: 20px 0 0 13px;">
+			<div class="main-list-content">
 				<div style="display:flex">
-					<div class="table-title" style="padding: 0px 8px 6px 0px;">Datasources Configurados</div>
-					<button (click)="onAdd(sourceType)" [disabled]="sourceTypes.length == 0" style="margin-left: 33%; padding: 1px 6px 1px 6px;">Adicionar</button>
-					<select [(ngModel)]="sourceType" style="margin-left: 10px; min-width: 70px">
+					<div class="table-title sourceconfig-title" >Datasources Configurados</div>
+					<button (click)="onAdd(sourceType)" [disabled]="sourceTypes.length == 0" class="add-button">Adicionar</button>
+					<select [(ngModel)]="sourceType" class="datasource-type">
 						<option *ngFor="let st of sourceTypes" value="{{st}}">{{st}}</option>
 					</select>
 				</div>
-				<div style="margin: 5px 0 10px 0;">
-					<table cellspacing="0" style="width: 100%">
+				<div class="sourceconfig-list-content">
+					<table cellspacing="0" class="width-100">
 						<thead>
 							<td class="table-header" style="width: 23%">Tipo</td>
 							<td class="table-header" style="width: 56%">Tabelas/Arquivos</td>
@@ -23,12 +23,12 @@
 								<td class="t-columns" style="padding: 3px">{{ds.dataSourceType}}</td>
 								<td class="t-columns">{{ds.resourceNames}}</td>
 								<td class="t-columns">
-									<button (click)="onEdit(ds.dataSourceType)" style="padding: 1px 6px 1px 6px;">Editar</button>
+									<button (click)="onEdit(ds.dataSourceType)" class="edit-button">Editar</button>
 								</td>
 							</tr>
 						</tbody>
 					</table>
-					<div style="display:flex; margin-left: 10px; margin-top:5px;">
+					<div class="sourceconfig-pagination-div">
 						<div style="width:90%"></div>
 						<div style="display:flex">
 							<button class="page-button" style="border-radius: 5px 0 0 5px;"><<</button>
