--- a/src/styles.css
+++ b/src/styles.css
@@ -188,41 +188,6 @@ select.style::-webkit-scrollbar-thumb {
 	font-weight: 600
 }
 
-.mapping-field{
-	font-size: 12px;  
-	width: 11%
-}
-
-.mapping-field-container{
-	margin: 9px 0 0 11px; 
-	display: flex;
-}
-
-.mapping-panel{
-	margin: 7px 9px 0 13px; 
-	border-radius: 8px;
-	border: 1px solid rgb(184 205 241); 
-}
-
-.schedule-field-container{
-	margin: 18px 0 0 24px; 
-	display: flex; 
-	width: 25%
-}
-
-.schedule-field{
-	font-size: 12px;  
-	margin-right: 18px; 
-	width: 18%;
-}
-	
-.schedule-list-container{
-	font-size: 14px;  
-	margin-right: 13px; 
-	padding-top: 8px;
-}
-
-
 .invisible{
 	position: absolute;
 	top: -1px;
@@ -232,7 +197,6 @@ select.style::-webkit-scrollbar-thumb {
 	opacity: 0;
 	
 }
-
 
 .active-link {
 	display: flex;
@@ -255,8 +219,24 @@ select.style::-webkit-scrollbar-thumb {
     width: 10%;
 }
 
+.width-15 {
+    width: 15%
+}
+
 .width-20{
     width: 20%
+}
+
+.width-28{
+    width: 28%
+}
+
+.width-30 {
+    width: 30%;
+}
+
+.width-45 {
+    width: 45%;
 }
 
 .width-60 {
@@ -265,6 +245,10 @@ select.style::-webkit-scrollbar-thumb {
 
 .width-65 {
     width: 65%
+}
+
+.width-90{
+    width: 90%;
 }
 
 .width-100{
