Alteracoes do code review

--- a/src/app/alert/alert.component.css
+++ b/src/app/alert/alert.component.css
@@ -8,12 +8,8 @@
     padding: 1px;
 }
 
-.add-button{
+.alert-button{
     padding: 1px 6px 1px 6px;
-}
-
-.delete-button{
-    padding: 1px 6px 1px 6px;;
 }
 
 .div-save-button{
