--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,8 @@
 <div style="display: flex">
     <div *ngIf="isLogged()" class="main-layout" >
         <div class="top-logo">
-            <img src="assets/img/Logo_LKM.png" class="main-logo">
+            <img src="assets/img/logo_branco.png" class="main-logo">
+            <!--div class="recorte"></div-->
         </div>
         <div class="down-logo">
         </div>
