--- a/src/app/matcher/matcher.component.html
+++ b/src/app/matcher/matcher.component.html
@@ -5,7 +5,7 @@
 			<div class="main-content">
 				<div class="width-45">
 					<div class="safxtable-name">TaxOne ({{safxTableName}})</div>
-					<div class="list-content width-100">
+					<div class="list-content width-100" style="margin-right: 0px;">
 						<table cellspacing="0" class="width-100">
 							<thead>
 								<td class="table-header width-30" style="padding-left: 5px;">Nome Coluna</td>
