--- a/src/app/schedule/schedule.component.css
+++ b/src/app/schedule/schedule.component.css
@@ -1,6 +1,6 @@
 .field-nome{
     display: flex; 
-    margin: 30px 0 0 28px;
+    margin: 30px 0 0 13px;
 }
 
 
@@ -28,7 +28,7 @@
 }
 
 .disponivel-container {
-    margin: 32px 0 0 28px; 
+    margin: 22px 0 0 13px; 
     display: flex; 
     width: 35%
 }
@@ -44,7 +44,7 @@
 }
 
 .selecionadas-container {
-    margin-top: 32px; 
+    margin-top: 22px; 
     display: flex; 
     width: 35%
 }
@@ -56,7 +56,7 @@
 }
 
 .dias-container {
-    margin: 32px 0 0 100px; 
+    margin: 22px 0 0 100px; 
     display: flex; 
     width: 35%
 }
@@ -68,7 +68,7 @@
 }
 
 .horas-container {
-    margin: 32px 0 0 28px; 
+    margin: 22px 0 0 28px; 
     display: flex; 
     width: 35%
 }
@@ -80,12 +80,12 @@
 }
 
 .main-criteria-content {
-    margin:17px 0 0 28px;
+    margin:2px 0 0 13px;
 }
 
 .criterio-list-content {
     margin: 5px 0 10px 0; 
-    width:74%
+    width:97%
 }
 
 .add-delete-button {
@@ -93,7 +93,6 @@
 }
 
 .button-container{
-    width: 87%; 
     direction: rtl; 
-    margin: 5px 0 12px 0;
+    margin: 5px 40px 12px 0;
 }
