--- a/src/app/sourceconfig/sourceconfig.component.css
+++ b/src/app/sourceconfig/sourceconfig.component.css
@@ -6,7 +6,8 @@
 .detalhes-label {
     font-size: 14px; 
     font-weight: 600; 
-    margin-left:13px
+    margin-left:13px;
+    color: #b33a00;
 }
 
 .mapping-field{
@@ -22,7 +23,7 @@
 .mapping-panel{
 	margin: 7px 9px 0 13px; 
 	border-radius: 8px;
-	border: 1px solid rgb(184 205 241); 
+	border: 1px solid #f2b7a0;
 }
 
 .metadata-button {
@@ -48,7 +49,6 @@
     
     
 .button-container {
-    width: 60%; 
     direction: rtl; 
-    margin-top: 10px
+    margin: 6% 3% 0px 0px;
 }    
